tests/errors/bad_ref1.asm
FUNC LABEL 0
    MOV STK A VAL 9
    REF STK B VAL 10
    PRINT PTR B
    RET
